--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: rgb(33,97,95);
+    background-color: rgb(91,97,107);
     background-attachment: fixed;
     background-size: cover;
 }
@@ -18,7 +18,7 @@ body{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    background-color: rgb(99,244,223);
+    background-color: rgb(239,194,163);
     border-radius: 10px;
     margin-bottom: 100px;
 }
@@ -49,7 +49,7 @@ li{
     font-size: 33px;
     font-family: Arial, Helvetica, sans-serif;
     text-transform: uppercase;
-    background-color: rgb(99,244,223);
+    background-color: rgb(239,194,163);
     margin: 100px;
     border-radius: 10px;
 }
@@ -70,4 +70,16 @@ input{
     background-color: white;
     border-color: white solid;
     float: right;
+}
+
+button{
+    height: 40px;
+    width: 75px;
+    border-radius: 20px;
+    font-size: 30px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    background-color: rgb(91,97,107);
+    color: white;
+    border: 2px rgb(91,97,107) solid;
 }
